--- a/Prj14_Parole/.settings/org.eclipse.wst.common.component
+++ b/Prj14_Parole/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Prj14_Parole">
+    <wb-module deploy-name="parole-libere-0.0.1">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="Prj14_Parole"/>
         <property name="java-output-path" value="/Prj14_Parole/build/classes"/>
+        <property name="context-root" value="parole-libere"/>
     </wb-module>
 </project-modules>
